# watchmen

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  common.rs  config.toml  main.py  package.json  pyproject.toml  setup.py  tarpaulin-report.html  task.toml
common/: Cargo.toml  arg.rs  task.rs  trait_task.rs
common/src/: arg.rs  config.rs  handle.rs  task.rs  trait_task.rs
common/tests/: arg_test.rs
common/tests/ini/: error.ini  task.ini
common/tests/toml/: task.toml
daemon/: Cargo.toml
daemon/http-panel/: index.html  main.js  package.json
daemon/src/: command.rs  engine.rs  entity.rs  lib.rs  macros.rs  main.rs  monitor.rs  socket.rs  utils.rs
daemon/src/command/: add.rs  exit.rs  list.rs  pause.rs  restart.rs  resume.rs  run.rs  start.rs  stop.rs
daemon/src/engine/: http.rs  sock.rs  socket.rs
daemon/tests/: test_http.rs  test_sock.rs  test_socket.rs  test_task.rs
guard/: Cargo.toml
guard/src/: main.rs
plugins/plugin/: Cargo.toml
plugins/plugin/src/: lib.rs
script/: task.js  task.py  task.sh
watchmen/: Cargo.toml
watchmen/src/: args.rs  command.rs  commands.rs  engine.rs  entity.rs  lib.rs  main.rs  socket.rs  utils.rs
watchmen/src/args/: daemon.rs  generate.rs
watchmen/src/command/: add.rs  exit.rs  list.rs  pause.rs  restart.rs  resume.rs  run.rs  start.rs  stop.rs
watchmen/src/commands/: add.rs  exit.rs  list.rs  pause.rs  reload.rs  remove.rs  restart.rs  resume.rs  run.rs  start.rs  stop.rs
watchmen/src/engine/: sock.rs
watchmen/tests/: config.toml
watchmend/: Cargo.toml  README.md
watchmend/http-panel/: index.html  main.js  package.json  vite.config.js
watchmend/src/: command.rs  common.rs  engine.rs  lib.rs  main.rs  monitor.rs
watchmend/src/common/: config.rs  handle.rs  trait_task.rs
watchmend/src/engine/: http.rs  sock.rs  socket.rs
watchmend/tests/: test_http.rs  test_sock.rs  test_socket.rs  test_task.rs
