[package]
name = "daemon"
version = "0.1.0"
authors = ["ahriknow <ahriknow@ahriknow.com>"]
edition = "2021"
description = "Watchmen is a daemon process manager that for you manage and keep your application online 24/7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "daemon"
path = "src/lib.rs"

[[bin]]
name = "daemon"
path = "src/main.rs"

[features]
default = ["sock", "socket", "http"]
sock = []
socket = []
http = []
redis = []

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
colored = "2"
nanoid = "0.4.0"
chrono = "0.4.22"
log = "0.4"
dirs = "4"
common = { path = "../common" }
logger = { path = "../library/logger" }
