[package]
name = "watchmen"
version = "0.1.0"
authors = ["ahriknow <ahriknow@ahriknow.com>"]
edition = "2021"
description = "Watchmen is a daemon process manager that for you manage and keep your application online 24/7"
license = "Apache-2.0"
documentation = "https://docs.ahriknow.com/watchmen"
homepage = "https://docs.ahriknow.com/watchmen"
repository = "https://git.ahriknow.com/ahriknow/watchmen.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "watchmen"
path = "src/lib.rs"

[[bin]]
name = "watchmen"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
colored = "2"
chrono = "0.4.22"
libloading = "0.7.3"
clap = { version = "4.3.0", features = ["derive"] }
dirs = "4"
configparser = "3.0.2"
regex = "1.6"
common = { path = "../common", version = "*" }
