[package]
name = "watchmend"
version = "0.1.0"
authors = ["ahriknow <ahriknow@ahriknow.com>"]
edition = "2021"
description = "Watchmen is a daemon process manager that for you manage and keep your application online 24/7"
documentation = "https://docs.ahriknow.com/watchmen"
readme = "README.md"
homepage = "https://docs.ahriknow.com/watchmen"
repository = "https://git.ahriknow.com/ahriknow/watchmen.git"
license = "Apache-2.0"
keywords = ["watchmen", "ahriknow", "daemon", "process", "manager", "online", "24/7", "rust"]
categories = ["system-programming", "development-tools", "utilities", "os", "os::linux-apis"]
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "watchmend"
path = "src/lib.rs"

[[bin]]
name = "watchmend"
path = "src/main.rs"

[features]
default = ["sock", "socket", "http", "http-panel"]
sock = []
socket = []
http = []
http-panel = []
redis = []

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
colored = "2"
nanoid = "0.4.0"
chrono = "0.4"
log = "0.4"
dirs = "5"
regex = "1.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
common = { path = "../common", version = "*" }
